--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
-language: node_js
 
-services: -docker
+echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+language: node_js
+ 
+services: 
 # Build
 - docker build -t udagram-api-feed ./udagram-api-feed
 - docker build -t udagram-api-user ./udagram-api-user
@@ -12,7 +14,7 @@ services: -docker
 - docker tag udagram-frontend sudkul/udagram-frontend:v1
 - docker tag udagram-reversproxy sudkul/udagram-reversproxy:v1
 #push
-- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+
 - docker push sudkul/udagram-api-feed:v1
 - docker push sudkul/udagram-api-user:v1
 - docker push sudkul/udagram-frontend:v1
