--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 
-echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-language: node_js
+
+language: ruby
  
 services: 
 # Build
@@ -14,7 +14,7 @@ services:
 - docker tag udagram-frontend sudkul/udagram-frontend:v1
 - docker tag udagram-reversproxy sudkul/udagram-reversproxy:v1
 #push
-
+echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 - docker push sudkul/udagram-api-feed:v1
 - docker push sudkul/udagram-api-user:v1
 - docker push sudkul/udagram-frontend:v1
