--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@
 os: osx
 language: node_js
  
-services: 
+services: - docker 
+script:
 # Build
 - docker build -t udagram-api-feed ./udagram-api-feed
 - docker build -t udagram-api-user ./udagram-api-user
