--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ script:
 - docker build -t udagram-api-feed ./udagram-api-feed
 - docker build -t udagram-api-user ./udagram-api-user
 - docker build -t udagram-frontend ./udagram-frontend
-- docker build -t udagram-reverseproxy ./udagram-reverseproxy
+- docker build -t udagram-reverseproxy ./reverseproxy
 # Tagging
 - docker tag udagram-api-feed sherif102/udagram-api-feed:v1
 - docker tag udagram-api-user sherif102/udagram-api-user:v1
 - docker tag udagram-frontend sherif102/udagram-frontend:v1
-- docker tag udagram-reverseproxy sherif102/udagram-reverseproxy:v1
+- docker tag udagram-reverseproxy sherif102/reverseproxy:v1
 #push
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 - docker push sherif102/udagram-frontend:v1
