--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
 ##- docker build -t udagram-api-feed ./udagram-api-feed
 ##- docker build -t udagram-api-user ./udagram-api-user
 ##- docker build -t udagram-frontend ./udagram-frontend
-- docker build -t reverseproxy ./reverseproxy
+- docker build -t reverseproxy ./udagram-reverseproxy
 # Tagging
 ##- docker tag udagram-api-feed sherif102/udagram-api-feed:v1
 ##- docker tag udagram-api-user sherif102/udagram-api-user:v1
