--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
 - docker tag reverseproxy sherif102/reverseproxy:v2
 #push
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-- docker push sherif102/udagram-frontend:v8
-- docker push sherif102/udagram-api-user:v1
-- docker push sherif102/reverseproxy:v1
-- docker push sherif102/udagram-api-feed:v1
+- docker push sherif102/udagram-frontend
+- docker push sherif102/udagram-api-user
+- docker push sherif102/reverseproxy
+- docker push sherif102/udagram-api-feed
