--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,18 @@ services: -docker
 
 script:
 # Build
-- docker build -t udagram-api-feed ./udagram-api-feed
-- docker build -t udagram-api-user ./udagram-api-user
-- docker build -t udagram-frontend ./udagram-frontend
-- docker build -t reverseproxy ./udagram-reverseproxy
+- docker build -t udagram-api-feed ./udagram-api-feedv:9
+- docker build -t udagram-api-user ./udagram-api-userv:9
+- docker build -t udagram-frontend ./udagram-frontend:v9
+- docker build -t reverseproxy ./udagram-reverseproxy:v9
 # Tagging
-- docker tag udagram-api-feed sherif102/udagram-api-feed:v2
-- docker tag udagram-api-user sherif102/udagram-api-user:v2
-- docker tag udagram-frontend sherif102/udagram-frontend:v2
-- docker tag reverseproxy sherif102/reverseproxy:v2
+- docker tag udagram-api-feed sherif102/udagram-api-feed:v9
+- docker tag udagram-api-user sherif102/udagram-api-user:v9
+- docker tag udagram-frontend sherif102/udagram-frontend:v9
+- docker tag reverseproxy sherif102/reverseproxy:v9
 #push
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-- docker push sherif102/udagram-frontend
-- docker push sherif102/udagram-api-user
-- docker push sherif102/reverseproxy
-- docker push sherif102/udagram-api-feed
+- docker push sherif102/udagram-frontend:v9
+- docker push sherif102/udagram-api-user:v9
+- docker push sherif102/reverseproxy:v9
+- docker push sherif102/udagram-api-feed:v9
