--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ services: -docker
 
 script:
 # Build
-- docker build -t udagram-api-feed ./udagram-api-feed:v9
-- docker build -t udagram-api-user ./udagram-api-user:v9
-- docker build -t udagram-frontend ./udagram-frontend:v9
-- docker build -t reverseproxy ./udagram-reverseproxy:v9
+- docker build -t udagram-api-feed ./udagram-api-feed
+- docker build -t udagram-api-user ./udagram-api-user
+- docker build -t udagram-frontend ./udagram-frontend
+- docker build -t reverseproxy ./udagram-reverseproxy
 # Tagging
 - docker tag udagram-api-feed sherif102/udagram-api-feed:v9
 - docker tag udagram-api-user sherif102/udagram-api-user:v9
