--- a/deployment/env-secret.yaml
+++ b/deployment/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRES_USER_NAME: cG9zdGdyZXM=
-  POSTGRES_PASSWORD: c2hyc2hyXzIwMDc=
+  POSTGRES_USER_NAME: postgres
+  POSTGRES_PASSWORD: postgres
