--- a/deployment/env-configmap.yaml
+++ b/deployment/env-configmap.yaml
@@ -5,12 +5,12 @@ metadata:
 
 data:
   
- POSTGRES_HOST: database-1.cetzhrehneud.us-east-1.rds.amazonaws.com
+ POSTGRES_HOST: postgres.cimjuig9cqej.us-east-1.rds.amazonaws.com
  POSTGRES_PASSWORD: postgres
  POSTGRES_USERNAME: postgres
  POSTGRES_DB: postgres
- AWS_BUCKET: arn:aws:s3:::my-754972972238-bucket
+ AWS_BUCKET: my-681268081671-bucket  
  AWS_REGION: us-east-1
  AWS_PROFILE: default
  JWT_SECRET: testing
- URL: a3df1e491ee964a43a0551de2aa07bd6-663823119.us-east-1.elb.amazonaws.com
+ URL: http://localhost:8100
