--- a/deployment/env-configmap.yaml
+++ b/deployment/env-configmap.yaml
@@ -9,8 +9,8 @@ data:
  POSTGRES_PASSWORD: postgres
  POSTGRES_USERNAME: postgres
  POSTGRES_DB: postgres
- AWS_BUCKET: my-681268081671-bucket  
+ AWS_BUCKET: arn:aws:s3:::my-681268081671-bucket 
  AWS_REGION: us-east-1
  AWS_PROFILE: default
  JWT_SECRET: testing
- URL: http://localhost:8100
+ URL: http://localhost:8100 
