--- a/deployment/env-configmap.yaml
+++ b/deployment/env-configmap.yaml
@@ -13,4 +13,4 @@ data:
  AWS_REGION: us-east-1
  AWS_PROFILE: default
  JWT_SECRET: testing
- URL: http://localhost:8100 
+ URL: http://ac7f6a2e8b2254e97b44e4bb31497ead-367010164.us-east-1.elb.amazonaws.com:8100 
