--- a/deployment/frontend.yaml
+++ b/deployment/frontend.yaml
@@ -1,40 +1,32 @@
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
+  name: udagram-frontend
+  labels:
+    app: udagram-frontend
 spec:
+  replicas: 2
   selector:
     matchLabels:
-      run: frontend
-  replicas: 2
+      app: udagram-frontend
   template:
     metadata:
       labels:
-        run: frontend
+        app: udagram-frontend
     spec:
       containers:
-      - name: frontend
+      - name: udagram-frontend
         image: docker.io/sherif102/udagram-frontend:v3
-        ports: 
+        imagePullPolicy: Always
+        ports:
         - containerPort: 80
         resources:
-          limits:
-            cpu: 500m
-            
           requests:
-            cpu: 200m
+            memory: "1024Mi"
+            cpu: "250m"
+          limits:
+            memory: "2048Mi"
+            cpu: "500m"
             
-          
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend
-  labels:
-    run: frontend
-spec:
-  ports:
-  - port: 80
-    protocol: TCP
-  selector:
-    run: frontend
+    
