--- a/deployment/backend-user-deployment.yaml
+++ b/deployment/backend-user-deployment.yaml
@@ -1,86 +1,40 @@
-   
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: udagram-api-user
-  labels:
-    app: udagram-api-user
+  name: backend-user
 spec:
-  replicas: 2
   selector:
     matchLabels:
-      app: udagram-api-user
+      run: backend-user
+  replicas: 2
   template:
     metadata:
       labels:
-        app: udagram-api-user
+        run: backend-user
     spec:
       containers:
-      - name: udagram-api-user
-        image: docker.io/sherif102/udagram-api-user:v3
-        imagePullPolicy: Always
+      - name: backend-user
+        image: docker.io/sherif102/udagram-api-user:v4
         ports:
-        - containerPort: 8080
+        - containerPort: 80
         resources:
-          requests:
-            memory: "1024Mi"
-            cpu: "250m"
           limits:
-            memory: "2048Mi"
-            cpu: "500m"
-        env:
-            - name: AWS_ACCESS_KEY_ID
-              valueFrom:
-                secretKeyRef:
-                  name: aws-secret
-                  key: AWS_ACCESS_KEY_ID
-            - name: AWS_SECRET_ACCESS_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: aws-secret
-                  key: AWS_SECRET_ACCESS_KEY
-            - name: POSTGRES_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: env-secret
-                  key: POSTGRES_USERNAME
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: env-secret
-                  key: POSTGRES_PASSWORD
-            - name: JWT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: env-secret
-                  key: JWT_SECRET
-            - name: POSTGRES_HOST
-              valueFrom:
-                configMapKeyRef:
-                  name: env-configmap
-                  key: POSTGRES_HOST
-            - name: POSTGRES_DB
-              valueFrom:
-                configMapKeyRef:
-                  name: env-configmap
-                  key: POSTGRES_DB
-            - name: AWS_BUCKET
-              valueFrom:
-                configMapKeyRef:
-                  name: env-configmap
-                  key: AWS_BUCKET
-            - name: AWS_REGION
-              valueFrom:
-                configMapKeyRef:
-                  name: env-configmap
-                  key: AWS_REGION
-            - name: AWS_PROFILE
-              valueFrom:
-                configMapKeyRef:
-                  name: env-configmap
-                  key: AWS_PROFILE
-            - name: URL
-              valueFrom:
-                configMapKeyRef:
-                  name: env-configmap
-                  key: URL
+            cpu: 500m
+          requests:
+            cpu: 200m
+
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    service: backend-user
+  name: backend-user
+spec:
+  ports:
+  - name: "8080"
+    port: 8080
+    targetPort: 8080
+  selector:
+    service: backend-user
