--- a/deployment/frontend.yaml
+++ b/deployment/frontend.yaml
@@ -1,32 +1,40 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: udagram-frontend
-  labels:
-    app: udagram-frontend
+  name: frontend
 spec:
-  replicas: 2
   selector:
     matchLabels:
-      app: udagram-frontend
+      run: frontend
+  replicas: 2
   template:
     metadata:
       labels:
-        app: udagram-frontend
+        run: frontend
     spec:
       containers:
-      - name: udagram-frontend
-        image: docker.io/sherif102/udagram-frontend:v3
-        imagePullPolicy: Always
-        ports:
+      - name: frontend
+        image: docker.io/sherif102/udagram-frontend:v4
+        ports: 
         - containerPort: 80
         resources:
-          requests:
-            memory: "1024Mi"
-            cpu: "250m"
           limits:
-            memory: "2048Mi"
-            cpu: "500m"
+            cpu: 500m
             
-    
+          requests:
+            cpu: 200m
+            
+          
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend
+  labels:
+    run: frontend
+spec:
+  ports:
+  - port: 80
+    protocol: TCP
+  selector:
+    run: frontend
