--- a/deployment/env-configmap.yaml
+++ b/deployment/env-configmap.yaml
@@ -4,7 +4,6 @@ metadata:
   name: env-config
 
 data:
-  
   POSTGRES_USERNAME: postgres
   POSTGRES_PASSWORD: postgres
   POSTGRES_HOST: postgres.cu1fjfq3wk7n.eu-central-1.rds.amazonaws.com
@@ -13,5 +12,5 @@ data:
   AWS_REGION: us-east-1
   AWS_PROFILE: default
   JWT_SECRET: testing
-  URL: http://localhost:8080/api/v0
+  URL: http://10.100.27.178:80
 
