--- a/deployment/aws-secret.yaml
+++ b/deployment/aws-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysecret
+  name: aws-secret
 type: Opaque
 data:
   credentials: YXdzX2FjY2Vzc19rZXlfaWQgPSBBS0lBU0VGQTY2SEJQUFJYQUFQRwphd3Nfc2VjcmV0X2FjY2Vzc19rZXkgPSA2dVdIM3F5NmJZMHgvVWJua0NEbE9wdUJZVUh3ckJabWJxYTd5aDR3Cg==
