--- a/backend-feed-deployment (2).yaml
+++ b/backend-feed-deployment (2).yaml
@@ -2,21 +2,21 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: backend-user
-  name: backend-user
+    app: feed
+  name: feed
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: backend-user
+      app: feed
   template:
     metadata:
       labels:
-        app: backend-user
+        app: feed
     spec:
       containers:
-      - image: sherif102/udagram-api-user:v2
-        name: backend-user
+      - image: monairy/udagram-api-feed:latest
+        name: backend-feed
         imagePullPolicy: Always
         resources:
           requests:
