--- a/deployment/backend-user-deployment.yaml
+++ b/deployment/backend-user-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: backend-user
     spec:
       containers:
-      - image: sherif102/udagram-api-user:v3
+      - image: sherif102/udagram-api-user:v4
         name: backend-user
         imagePullPolicy: Always
         resources:
@@ -80,3 +80,18 @@ spec:
         - name: aws-secret
           secret:
             secretName: aws-secret
+
+---
+      apiVersion: v1
+      kind: Service
+      metadata:
+        labels:
+          service: backend-user
+        name: backend-user
+      spec:
+        ports:
+        - name: "8080"
+          port: 8080
+          targetPort: 8080
+        selector:
+          service: backend-user
