--- a/deployment/env-configmap.yaml
+++ b/deployment/env-configmap.yaml
@@ -9,8 +9,8 @@ data:
   POSTGRES_PASSWORD: postgres
   POSTGRES_HOST: postgres.cu1fjfq3wk7n.eu-central-1.rds.amazonaws.com
   POSTGRES_DB: postgres
-  AWS_BUCKET: my-146366460354-bucket
-  AWS_REGION: us-east-1
+  AWS_BUCKET: s-146366460354-bucket
+  AWS_REGION: eu-central-1
   AWS_PROFILE: default
   JWT_SECRET: testing
   URL: http://localhost:5432
