--- a/deployment/frontend.yaml
+++ b/deployment/frontend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: docker.io/sherif102/udagram-frontend:v4
+        image: sherif102/udagram-frontend:v4
         ports: 
         - containerPort: 80
         resources:
