--- a/deployment/reverseproxy.yaml
+++ b/deployment/reverseproxy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: reverseproxy
-        image: docker.io/sherif102/reverseproxy:v4
+        image: sherif102/reverseproxy:v4
         ports:
         - containerPort: 80
         resources:
